# UniversityUnixServer

./: .autotools  .cproject  .gitignore  .project  CMakeLists.txt  MattiaAngelini_CorsoA_chatty.tar  Note Per relazione  README.md  SPECIFICHE_README.txt  docker-compose.yml
Chatty/: Makefile  config.h
Chatty/Booleans/: Booleans.h
Chatty/Channel/: Channel.c  Channel.h  Channel_Test.c
Chatty/Client/: client.c
Chatty/Config/: chatty.conftest
Chatty/Connections/: connections.c  connections.h  test_client.c  test_server.c
Chatty/Debugger/: Debugger.h
Chatty/Error/: Error.h  Error.h.gch
Chatty/HashTable/: HasTable_Test.c  HashTable.c  HashTable.h  HashTableSynchronized.c  HashTableSynchronized.h  HashTableSyncronized.c  HashTable_Test.c
Chatty/List/: ListSynchronized.c  ListSynchronized.h  list.c  list.h  list_test.c
Chatty/MemoryHelper/: MemoryHelper.h
Chatty/Message/: message.c  message.h
Chatty/Operations/: ops.h
Chatty/Scripts/: ServerFileUtil.sh
Chatty/Server/: ServerGlobalData.c  ServerGlobalData.h  chatty.c
Chatty/Server/FileSync/: FileSync.c  FileSync.h
Chatty/Server/Group/: Group.c  Group.h
Chatty/Server/ServerMessages/: ServerMessages.c  ServerMessages.h
Chatty/Server/ServerOperations/: ServerOperations.c  ServerOperations.h
Chatty/Server/SocketSync/: SocketSync.c  SocketSync.h
Chatty/Server/Statistic/: stats.c  stats.h
Chatty/Server/User/: User.c  User.h
Chatty/Server/Worker/: Worker.c  Worker.h
Chatty/Server/WorkerPool/: WorkerPool.c  WorkerPool.h
Chatty/SettingManager/: SettingManager.c  SettingManager.h  SettingManager_Test.c
Chatty/SettingManager/Tests/: test.config
Chatty/Statistic/: stats.h
Chatty/Sync/: Sync.h
Chatty/Tests/: custom_stresstest.sh  custom_testgroups.sh  testconf.sh  testfile.sh  testleaks.sh  teststress.sh
Chatty/User/: User.c  User.h
Chatty/Utils/: Utils.c  Utils.h
Docker-compose/chatty_client/: Dockerfile
Docker-compose/connection_test_client/: Dockerfile
Docker-compose/connection_test_server/: Dockerfile
Docker-compose/gcc_gdb_server/: Dockerfile
Docker-compose/hash_table/: Dockerfile
Docker-compose/list/: Dockerfile
Docker-compose/make/: Dockerfile
Docker-compose/setting_parser/: Dockerfile
Exception/: Exception.h
SettingManager/: SettingManager.c  SettingManager.h  SettingManagerException.h  SettingManager_Test.c
SettingManager/Tests/: test.config
Utils/: Utils.c  Utils.h
